feat: add backfill command support.
